[package]
name = "crab_trap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
dirs = "5.0.1"
futures-core = "0.3.28"
futures-util = "0.3.28"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
sha256 = "1.1.4"
termion = "2.0.1"
tokio = {version = "1.28.2", features = ["full"]}
tokio-util = "0.7.8"
